GTNPORTAL-2868: Update the shared layout portlets to work better on mobile devices. Top level menu items are no longer links, clicking them will toggle open their submenus. Top level items which used to be links now have links at the end of their submenu.

--- a/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/view/UIToolbarContainer/Stylesheet.css
+++ b/web/eXoResources/src/main/webapp/skin/DefaultSkin/portal/webui/component/view/UIToolbarContainer/Stylesheet.css
@@ -57,6 +57,12 @@
 	margin: 0px;
 }
 
+.UIToolbarContainer .HorizontalSeparator {
+  background-color: #9E9FA5;
+  width: 100%;
+  height: 1px;
+}
+
 .UIToolbarContainer .NormalContainerBlock .ToolbarContainer {	
 	background: url('background/ToolbarContainer.gif') repeat-x left top;	
 	height: 32px;
